# DBoW2

./: CMakeLists.txt
include/DBoW2/: TemplatedVocabulary.h
python/: CMakeLists.txt  README
python/examples/: b.py
python/src/: dbow2.cpp
